fix: suppress JDK 25 Unsafe and Develocity build cache warnings
Signed-off-by: Marvin Froeder <velo.br@gmail.com>