@@ -1,3 +1,4 @@
+--sun-misc-unsafe-memory-access=allow
 --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
